adiciona funcionalidades para criação, listagem e exclusão de artigos, incluindo melhorias na estrutura do modelo Artigo e novas rotas

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -211,6 +211,12 @@
       <p>Explore repertórios socioculturais para enriquecer suas redações do ENEM. Veja exemplos, baixe arquivos e inspire-se com referências de alto nível.</p>
       <a href="/repertorios">Acesse agora ⟶</a>
     </div>
+
+    <div>
+      <h4>Conteúdos Didáticos</h4>
+      <p>Explore conteúdos que podem te ajudar a se preparar com mais qualidade para o ENEM, como dicas, conteúdos completos etc. Aproveite!</p>
+      <a href="/feed/artigos">Acesse agora ⟶</a>
+    </div>
   </div>
 
   <div class="dados">
