atualiza títulos das páginas de login e cadastro para "Estudaê - Login" e "Estudaê - Cadastro"

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} LearnLoop One {% endblock %}
+{% block title %} Estudaê - Login {% endblock %}
 
 {% block content %}
 <div class="container">
@@ -12,8 +12,5 @@
   </form>
   <small>Não tem uma conta? <a href="/cadastro">clique aqui</a></small>
 
-  <span class="alert">
-    Se você já tinha uma conta no Estudaê, ela deve ter sido apagada por conta da atualização da infraestrutura do Estudaê, por tanto, é recomendado que você recrie novamente!
-  </span>
 </div>
 {% endblock %}
