--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} LearnLoop One {% endblock %}
+{% block title %} Estudaê - Cadastro {% endblock %}
 
 {% block styled %}
 <style>
