--- a/app/templates/treino-redacao.html
+++ b/app/templates/treino-redacao.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}LearnLoop One{% endblock %}
+{% block title %}Estudaê - Corrigir Redação{% endblock %}
 
 {% block styled %}
 <style>
