novo texto do botão

--- a/app/templates/redacao-page.html
+++ b/app/templates/redacao-page.html
@@ -53,7 +53,7 @@
 
     <br> <br>
 
-    <button onclick="avaliarRedacao()">Avaliar redação</button>
+    <button onclick="avaliarRedacao()">Avaliar Correção</button>
 </div>
 
 
