atualiza rotas e desabilita botões na interface do usuário

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -216,17 +216,17 @@
     </div>
 
     <div>
-      <h4>Sessões de Estudos</h4>
+      <h4>Caderno Digital</h4>
       <p>Guarde o que você estudou de forma fácil! Será criada uma página exclusiva onde você poderá guardar documentos e gerar quiz com base em sua anotação para testar conhecimento e fazer revisões</p>
-      <a href="/feed-session">Acesse agora ⟶</a>
+      <a href="/caderno-digital">Acesse agora ⟶</a>
     </div>
-
+<!--
     <div>
       <h4>Radar do Conhecimento (NOVIDADE)</h4>
       <p>Descubra suas áreas de conhecimento e identifique pontos que precisam de mais atenção com nosso sistema inteligente.</p>
       <a href="/radar-conhecimento">Acesse agora ⟶</a>
     </div>
-
+  -->
     <div>
       <h4>Repertórios Socioculturais ENEM</h4>
       <p>Explore repertórios socioculturais para enriquecer suas redações do ENEM. Veja exemplos, baixe arquivos e inspire-se com referências de alto nível.</p>
