--- a/app/templates/treino-redacao.html
+++ b/app/templates/treino-redacao.html
@@ -47,10 +47,10 @@
     <textarea id="conteudo" placeholder="Digite sua redação (obrigatório)"></textarea>
   </div>
 
-  <button onclick="redacaoGuiada()">Redação Guiada</button>
+  <button onclick="redacaoGuiada()" disabled>Redação Guiada (DESABILITADO)</button>
   
-  <button onclick="redacao()">Enviar para Correção</button>
-  <button onclick="carregarFoto()">Digitalizar Redação Manuscrita</button> 
+  <button onclick="redacao()" disabled>Enviar para Correção (DESABILITADO)</button>
+  <button onclick="carregarFoto()" disabled>Digitalizar Redação Manuscrita (DESABILITADO)</button> 
 </div>
 
 
