--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -62,6 +62,11 @@ button{
   font-weight: 800;
 }
 
+button:disabled {
+  background-color: #595959;
+  color: #fff;
+}
+
 header span{
   font-family: var(--fontTitle);
   font-size: 2em;
