Adiciona suporte ao cliente OpenAI e atualiza modelos utilizados nas chamadas da API; habilita botões de interação na interface do usuário.

--- a/app/templates/session.html
+++ b/app/templates/session.html
@@ -63,7 +63,7 @@ a{
    </div>
 
    <div>
-      <button onclick="gerarQuiz('{{sessao.id}}')" disabled>Gerar Quiz (DESABILITADO)</button>
+      <button onclick="gerarQuiz('{{sessao.id}}')">Gerar Quiz</button>
    </div>
 
    
