--- a/app/templates/treino-redacao.html
+++ b/app/templates/treino-redacao.html
@@ -70,9 +70,9 @@
     <textarea id="conteudo" placeholder="Digite sua redação (obrigatório)"></textarea>
   </div>
 
-  <button onclick="redacaoGuiada()">Redação Guiada (DESABILITADO)</button>
+  <button onclick="redacaoGuiada()">Redação Guiada</button>
   
-  <button onclick="redacao()" disabled>Enviar para Correção (DESABILITADO)</button>
+  <button onclick="redacao()">Enviar para Correção</button>
   <button onclick="carregarFoto()" disabled>Digitalizar Redação Manuscrita (DESABILITADO)</button> 
 </div>
 
